--- a/index.html
+++ b/index.html
@@ -11,10 +11,8 @@
     <h3>Rama nueva development</h3>
     <h4>Otro cambio en la rama development</h4>
     <h5>Esto es una prueba development</h5>
-<<<<<<< HEAD
     <h6>Esto no existe</h6>
-=======
+    <p>laal</p>
     <p>Parrafo</p>
->>>>>>> development
 </body>
 </html>
